# telemetry-admin

./: .gitignore  BridgeScripts.txt  LICENSE  README.md  package-lock.json  package.json  playwright.config.ts  vite.config.ts
e2e/: gauge-setup.spec.ts  telemetry-playback.spec.ts
e2e/fixtures/: gauge-dashboards.ts
e2e/helpers/: mock-gql.ts
src/: App.css  App.tsx  Logo.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/data/: builtin_templates.json
src-tauri/src/: api.rs  gamepad.rs  main.rs  pipewire_dsp.rs  typiql_types.rs
src-tauri/src/config_manager/: app_config.rs  mod.rs  parser.rs  types.rs
src-tauri/src/graphql/: app_config.rs  builtin_templates.rs  car.rs  clients.rs  dashboard_entry.rs  dashboard_files.rs  gamepad.rs  mod.rs  shaker_dsp.rs  templates.rs
src-tauri/src/telemetry/: mod.rs  simdata.rs  types.rs
src/__tests__/: Canvas.test.tsx  ComponentPicker.test.tsx  DeviceProfileSaveBar.test.tsx  DeviceProfilesList.test.tsx  EffectRow.test.tsx  ObjectExplorer.test.tsx  canvasUtils.test.ts  computeFrame.test.ts  registry.test.ts  shakerUtils.test.ts  utils.test.ts
src/assets/: goku-gauge-generator.html
src/components/: logo.tsx
src/graphql/: client.ts
src/hooks/: useTauri.ts
src/lib/: dark-green.ts  dark-purple.ts  dark-red.ts  light-green.ts  light-purple.ts  styles.ts
src/mock/: dashboardMock.ts  ledsDeviceMock.ts  shiftLightMock.ts  simWindDeviceMock.ts  templateMock.ts
src/test/: setup.ts
src/types/: ChannelConfig.ts  ChannelEffect.ts  ShakerEffect.ts  dashboard.ts  index.ts
src/utils/: getSectionName.ts  (+3 more)
(+178 files in other folders)
